[package]
name = "split-log"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4"
clap = { version = "4.4.14", features = ["derive"] }
flate2 = { version = "1.0.28", features = ["miniz_oxide"] }
futures = "0.3.30"
humantime = "2.1.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
rayon = "1.8.0"
serde = "1.0"
serde_json = "1.0"
